fix: hero mobile sizing and layout shift

--- a/src/styles/PageHero.module.css
+++ b/src/styles/PageHero.module.css
@@ -10,14 +10,14 @@
 }
 
 .hero h1 {
-  @apply text-6xl tracking-normal;
+  @apply text-4xl tracking-normal md:text-6xl;
 }
 /* .hero p {
   @apply text-xl;
 } */
 
 .inner {
-  @apply min-h-[24rem] py-20;
+  @apply min-h-[24rem] pt-20 pb-10 lg:py-20;
   @apply flex items-center justify-center text-center;
   @apply text-white;
 }
